# Annotator

./: .gitignore  pyproject.toml
db/: setup_db.py
src/: preprocess.py
src/api/: db.py  main_api.py
src/frontend/annotator/: README.md  package-lock.json  package.json
src/frontend/annotator/src/: App.vue
src/frontend/annotator/src/assets/: base.css  main.css
src/frontend/annotator/src/components/2Panes/: LeftPane.vue  RightPane.vue
