[tool.poetry]
name = "annotator"
version = "0.1.0"
description = ""
authors = ["Craig Hagerman <craighagerman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
fastapi = "^0.110.0"
ipython = "^8.22.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
